--- a/PA1_template.html
+++ b/PA1_template.html
@@ -368,7 +368,7 @@ summary {
 
 <div id="loading-and-preprocessing-the-data" class="section level2">
 <h2>Loading and preprocessing the data</h2>
-<p>The following code shows how the data was imported. <strong>Note:</strong> When testing the code on RStudio, donwload the csv and markdown files to your folder of interest. Then, set your working directory by selecting the appropriate folder under the Files tab, clicking More followed by <em>Set As Working Directory</em>.</p>
+<p>The following code shows how the data was imported.</p>
 <pre class="r"><code>fil &lt;- download.file(&#39;https://d396qusza40orc.cloudfront.net/repdata%2Fdata%2Factivity.zip&#39;,&#39;activity.zip&#39;)
 unzip(&#39;activity.zip&#39;)
 data &lt;- read.csv(&#39;activity.csv&#39;)</code></pre>
